# kitweb

./: Cargo.toml  README.md
docs/: audio-setup.md  bandwidth.md
src/: audio.rs  browser.rs  capture.rs  config.rs  input.rs  kitty.rs  main.rs  renderer.rs
